# EmailSender_Consumer

./: .env-dist  docker-compose.yml
consumer/: consumer.py  email_generator.py  main.py  message_consumer.py  pyproject.toml  starter.py
consumer/settings/: settings.py
consumer/templates/new_email/email/: content.html  subject.txt
docker/: Dockerfile  post_deploy.sh
