[tool.poetry]
name = "consumer"
version = "0.1.0"
description = ""
authors = ["LuisGaldeano <luis.galdeano@jumbotours.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^2.3.0"
jinja2 = "^3.1.3"
python-dotenv = "1.0.0"
httpx = "0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
